image distortion fixed

--- a/styles/components/page/Product/PackagesSlider.scss
+++ b/styles/components/page/Product/PackagesSlider.scss
@@ -370,6 +370,8 @@
 						left: 0;
 						width: 100%;
 						height: 100%;
+						object-fit: contain;
+						// background-color: #fff;
 					}
 				}
 			}
